FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20140708:
AUTHOR: mva@FreeBSD.org

  Support for installations based on the easy_install setup.py target has
  been removed from the Ports framework for Python software. The
  PYEASYINSTALL_* knobs and support for USE_PYDISTUTILS=easy_install have
  been removed.

20140623:
AUTHOR: bapt@FreeBSD.org

  IGNOREFILES is not supported anymore, it was an unsafe feature allowing to
  use unchecked files downloaded from untrusted places to be used in the ports
  tree.

20140607:
AUTHOR: mva@FreeBSD.org

  New PYTHON_CONCURRENT_INSTALL knob to support the parallel installation
  of ports for different python versions.

  If set to yes, the knob indicates that the port can be installed for
  different python versions at the same time. The port will use a unique
  prefix for certain directories using USES=uniquefiles:dirs (see the
  uniquefiles.mk Uses for details about the directories). Binaries
  receive an additional suffix, based on ${PYTHON_VER}.

  The values for the uniquefiles USES are set as follows:

    UNIQUE_PREFIX=  ${PYTHON_PKGNAMEPREFIX}
    UNIQUE_SUFFIX=  -${PYTHON_VER}

  If the port is installed for the current default python version, scripts and
  binaries in

    ${PREFIX}/bin
    ${PREFIX}/sbin
    ${PREFIX}/libexec

  are linked from the prefixed version to the prefix-less original name,
  e.g. bin/foo-2.7 --> bin/foo.

20140529:
AUTHOR: miwi@FreeBSD.org

  USE_GMAKE is no longer supported, please use USES=gmake instead

20140526:
AUTHOR: bapt@FreeBSD.org

  USE_DOS2UNIX is no longer supported, USES=dos2unix should be used instead

20140525:
AUTHOR: mat@FreeBSD.org
